--- a/client/app/CancelLeave/CancelLeave.html
+++ b/client/app/CancelLeave/CancelLeave.html
@@ -1,20 +1,22 @@
 <div class="col-md-12">
-  <h1>Pending Leave</h1><br>
+  <h1>My Leave</h1><br>
   <form>
     <table>
       <!--<tr ng-repeat="friend in friends | filter:searchText">-->
-      <tr ng-repeat="entry in entries">
+      <tr ng-repeat="entry in entries"  >
         <td>From: {{entry.dateFrom}}  </td>
         <td>To: {{entry.dateTo}}  </td>
         <td>Time: {{entry.timeFrom}}  </td>
         <td>-  {{entry.timeTo}}  </td>
         <td>Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
-        <td><span ng-if="!entry.approved"> <input type="submit" id="submit" value="Approve" ng-click="approve(entry)" /></span></td>
-        <td><br><br></td>
+        <td><a ng-click="delete(entry)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span>
+        </a></tr></td>
+        <br>
+        <!--<td><input type="submit" id="submit" value="Cancel" /></td>-->
       </tr>
-
       <!--<tr ng-repeat="username in entries">
       {{entries}}<br>-->
     </table>
   </form>
 </div>
+
