--- a/client/app/UserDashboard/UserDashboard.html
+++ b/client/app/UserDashboard/UserDashboard.html
@@ -6,19 +6,19 @@
         Leave System
     </li>
     <li>
-      <a href="#">Calendar</a>
+      <a href="calendarpage">Calendar</a>
     </li>
     <li>
-      <a href="ManageLeave">Submit Leave</a>
+      <a href="SubmitLeave">Submit Leave</a>
     </li>
     <li>
       <a href="#">Edit Leave</a>
     </li>
     <li>
-      <a href="#">Cancel Leave</a>
+      <a href="CancelLeave">Cancel Leave</a>
     </li>
     <li>
-      <a href="#">View My Submissions</a>
+      <a href="ViewLeave">View My Submissions</a>
     </li>
     <li>
       <a href="#">Leave Balance</a>
