--- a/client/app/AdminDashboard/AdminDashboard.html
+++ b/client/app/AdminDashboard/AdminDashboard.html
@@ -1,5 +1,38 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="col-md-12">
-This is the AdminDashboard view.
+
+  <ul class="sidebar-nav">
+    <li class="sidebar-brand">
+      Leave System - Admin
+    </li>
+    <li>
+      <a href="calendarpage">Calendar</a>
+    </li>
+    <li>
+      <a href="SubmitLeave">Submit Leave</a>
+    </li>
+    <li>
+      <a href="#">Edit Leave</a>
+    </li>
+    <li>
+      <a href="CancelLeave">Cancel Leave</a>
+    </li>
+    <li>
+      <a href="ViewLeave">View My Submissions</a>
+    </li>
+    <li>
+      <a href="#">Leave Balance</a>
+    </li>
+    <br>
+    <li>
+      <a href="ManageLeave">Approve Leave</a>
+    </li>
+    <li>
+      <a href="#">Profile</a>
+    </li>
+    <li>
+      <a href="#">Logout</a>
+    </li>
+  </ul>
 </div>
