--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/AdminDashboard/AdminDashboard.css">
       <link rel="stylesheet" href="app/CancelLeave/CancelLeave.css">
+      <link rel="stylesheet" href="app/EditLeave/EditLeave.css">
       <link rel="stylesheet" href="app/ManageLeave/ManageLeave.css">
       <link rel="stylesheet" href="app/SubmitLeave/SubmitLeave.css">
       <link rel="stylesheet" href="app/UserDashboard/UserDashboard.css">
