--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,8 @@
           <script src="app/AdminDashboard/AdminDashboard.js"></script>
           <script src="app/CancelLeave/CancelLeave.controller.js"></script>
           <script src="app/CancelLeave/CancelLeave.js"></script>
+          <script src="app/EditLeave/EditLeave.controller.js"></script>
+          <script src="app/EditLeave/EditLeave.js"></script>
           <script src="app/ManageLeave/ManageLeave.controller.js"></script>
           <script src="app/ManageLeave/ManageLeave.js"></script>
           <script src="app/SubmitLeave/SubmitLeave.controller.js"></script>
