--- a/client/app/UserDashboard/UserDashboard.html
+++ b/client/app/UserDashboard/UserDashboard.html
@@ -12,7 +12,7 @@
       <a href="SubmitLeave">Submit Leave</a>
     </li>
     <li>
-      <a href="#">Edit Leave</a>
+      <a href="EditLeave">Edit Leave</a>
     </li>
     <li>
       <a href="CancelLeave">Cancel Leave</a>
