--- a/client/app/AdminDashboard/AdminDashboard.html
+++ b/client/app/AdminDashboard/AdminDashboard.html
@@ -29,6 +29,9 @@
       <a href="ManageLeave">Approve Leave</a>
     </li>
     <li>
+      <a href="Roster">Leave Roster</a>
+    </li>
+    <li>
       <a href="#">Profile</a>
     </li>
     <li>
