--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="app/CancelLeave/CancelLeave.css">
       <link rel="stylesheet" href="app/EditLeave/EditLeave.css">
       <link rel="stylesheet" href="app/ManageLeave/ManageLeave.css">
+      <link rel="stylesheet" href="app/Roster/Roster.css">
       <link rel="stylesheet" href="app/SubmitLeave/SubmitLeave.css">
       <link rel="stylesheet" href="app/UserDashboard/UserDashboard.css">
       <link rel="stylesheet" href="app/ViewLeave/ViewLeave.css">
@@ -96,6 +97,8 @@
           <script src="app/UserDashboard/UserDashboard.js"></script>
           <script src="app/ViewLeave/ViewLeave.controller.js"></script>
           <script src="app/ViewLeave/ViewLeave.js"></script>
+          <script src="app/Roster/Roster.controller.js"></script>
+          <script src="app/Roster/Roster.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
