--- a/client/app/AdminDashboard/AdminDashboard.html
+++ b/client/app/AdminDashboard/AdminDashboard.html
@@ -13,7 +13,7 @@
       <a href="SubmitLeave">Submit Leave</a>
     </li>
     <li>
-      <a href="#">Edit Leave</a>
+      <a href="EditLeave">Edit Leave</a>
     </li>
     <li>
       <a href="CancelLeave">Cancel Leave</a>
