--- a/client/app/EditLeave/EditLeave.html
+++ b/client/app/EditLeave/EditLeave.html
@@ -6,10 +6,10 @@
       <tr ng-repeat="entry in entries"  >
         <td>From: <input type=text ng-model="entry.dateFrom" name="dateFrom" id="dateFrom" placeholder={{entry.dateFrom}}> </td>
         <td>To: <input type=text ng-model="entry.dateTo" name="dateTo" id="dateTo" placeholder={{entry.dateTo}}>  </td>
-        <td>Time: <input type=text ng-model="entry.timeFrom" name="timeFrom" id="timeFrom" placeholder={{entry.timeFrom}}>  </td>
+        <td>&emsp;Time: <input type=text ng-model="entry.timeFrom" name="timeFrom" id="timeFrom" placeholder={{entry.timeFrom}}>  </td>
         <td>-  <input type=text ng-model="entry.timeTo" name="timeTo" id="timeTo" placeholder={{entry.timeTo}}>  </td>
-        <td>Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
-        <td><br><input type="submit" id="submit" value="Submit" ng-click="submit(entry)" /></td>
+        <td>&emsp;Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
+        <td>&emsp;<input type="submit" id="submit" value="Submit" ng-click="submit(entry)" /></td>
         </a></tr></td>
       <br>
       <!--<td><input type="submit" id="submit" value="Cancel" /></td>-->
