--- a/client/app/ManageLeave/ManageLeave.html
+++ b/client/app/ManageLeave/ManageLeave.html
@@ -6,9 +6,9 @@
       <tr ng-repeat="entry in entries">
         <td>From: {{entry.dateFrom}}  </td>
         <td>To: {{entry.dateTo}}  </td>
-        <td>Time: {{entry.timeFrom}}  </td>
+        <td>&emsp;Time: {{entry.timeFrom}}  </td>
         <td>-  {{entry.timeTo}}  </td>
-        <td>Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
+        <td>&emsp;Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
         <td><span ng-if="!entry.approved"> <input type="submit" id="submit" value="Approve" ng-click="approve(entry)" /></span></td>
         <td><br><br></td>
       </tr>
