--- a/client/app/AdminDashboard/AdminDashboard.html
+++ b/client/app/AdminDashboard/AdminDashboard.html
@@ -24,7 +24,7 @@
     <li>
       <a href="#">Leave Balance</a>
     </li>
-    <br>
+    <br><br>
     <li>
       <a href="ManageLeave">Approve Leave</a>
     </li>
@@ -32,10 +32,7 @@
       <a href="Roster">Leave Roster</a>
     </li>
     <li>
-      <a href="#">Profile</a>
-    </li>
-    <li>
-      <a href="#">Logout</a>
+      <a href="UserProfile">Profile</a>
     </li>
   </ul>
 </div>
