--- a/client/app/UserDashboard/UserDashboard.html
+++ b/client/app/UserDashboard/UserDashboard.html
@@ -23,12 +23,9 @@
     <li>
       <a href="#">Leave Balance</a>
     </li>
-      <br>
+      <br><br>
     <li>
-      <a href="#">Profile</a>
-    </li>
-    <li>
-      <a href="#">Logout</a>
+      <a href="UserProfile">Profile</a>
     </li>
   </ul>
 </div>
