--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
       <link rel="stylesheet" href="app/Roster/Roster.css">
       <link rel="stylesheet" href="app/SubmitLeave/SubmitLeave.css">
       <link rel="stylesheet" href="app/UserDashboard/UserDashboard.css">
+      <link rel="stylesheet" href="app/UserProfile/UserProfile.css">
       <link rel="stylesheet" href="app/ViewLeave/ViewLeave.css">
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
@@ -99,6 +100,8 @@
           <script src="app/ViewLeave/ViewLeave.js"></script>
           <script src="app/Roster/Roster.controller.js"></script>
           <script src="app/Roster/Roster.js"></script>
+          <script src="app/UserProfile/UserProfile.controller.js"></script>
+          <script src="app/UserProfile/UserProfile.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
