--- a/client/index.html
+++ b/client/index.html
@@ -92,16 +92,16 @@
           <script src="app/EditLeave/EditLeave.js"></script>
           <script src="app/ManageLeave/ManageLeave.controller.js"></script>
           <script src="app/ManageLeave/ManageLeave.js"></script>
+          <script src="app/Roster/Roster.controller.js"></script>
+          <script src="app/Roster/Roster.js"></script>
           <script src="app/SubmitLeave/SubmitLeave.controller.js"></script>
           <script src="app/SubmitLeave/SubmitLeave.js"></script>
           <script src="app/UserDashboard/UserDashboard.controller.js"></script>
           <script src="app/UserDashboard/UserDashboard.js"></script>
-          <script src="app/ViewLeave/ViewLeave.controller.js"></script>
-          <script src="app/ViewLeave/ViewLeave.js"></script>
-          <script src="app/Roster/Roster.controller.js"></script>
-          <script src="app/Roster/Roster.js"></script>
           <script src="app/UserProfile/UserProfile.controller.js"></script>
           <script src="app/UserProfile/UserProfile.js"></script>
+          <script src="app/ViewLeave/ViewLeave.controller.js"></script>
+          <script src="app/ViewLeave/ViewLeave.js"></script>
           <script src="app/account/account.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
@@ -113,6 +113,7 @@
           <script src="app/leaveData/leaveData.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/profileData/profileData.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
