--- a/client/app/UserProfile/UserProfile.html
+++ b/client/app/UserProfile/UserProfile.html
@@ -1,3 +1,16 @@
 <div class="col-md-12">
-This is the UserProfile view.
+  <h1>My Profile</h1><br>
+  <form>
+    <table>
+      <!--<tr ng-repeat="friend in friends | filter:searchText">-->
+      <tr ng-repeat="entry in entries" >
+        <td>Name: {{entry.name}} </td>
+        <td>Address: {{entry.address}}</td>
+        <td>Home: {{entry.landLine}}  </td>
+        <td>Mobile: {{entry.mobile}}</td>
+        <td></td>
+        <td><input type="submit" id="submit" value="submit" ng-click="submit(entry)" /></td>
+      </tr>
+    </table>
+  </form>
 </div>
