--- a/client/app/ManageLeave/ManageLeave.html
+++ b/client/app/ManageLeave/ManageLeave.html
@@ -1,3 +1,5 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+
 <div class="col-md-12">
   <h1>Pending Leave</h1><br>
   <form>
@@ -8,6 +10,7 @@
         <td>To: {{entry.dateTo}}  </td>
         <td>&emsp;Time: {{entry.timeFrom}}  </td>
         <td>-  {{entry.timeTo}}  </td>
+        <td>&emsp;User: {{entry.loginID}}  </td>
         <td>&emsp;Status: <span ng-if="entry.approved">Approved</span><span ng-if="!entry.approved">Pending approval</span> </td>
         <td><span ng-if="!entry.approved"> <input type="submit" id="submit" value="Approve" ng-click="approve(entry)" /></span></td>
         <td><br><br></td>
