--- a/client/app/calendarpage/calendarpage.html
+++ b/client/app/calendarpage/calendarpage.html
@@ -1,4 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class="col-md-12">
+  <pre>{{leaveEntries}}</pre>
+
   <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
 </div>
