--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,7 @@
       <script src="bower_components/angular-ui-calendar/src/calendar.js"></script>
       <script src="bower_components/moment/moment.js"></script>
       <script src="bower_components/angular-bootstrap-calendar/dist/js/angular-bootstrap-calendar-tpls.min.js"></script>
+      <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -114,6 +115,7 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/profileData/profileData.service.js"></script>
+          <script src="app/userFilter/userFilter.filter.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
