--- a/client/app/CancelLeave/CancelLeave.html
+++ b/client/app/CancelLeave/CancelLeave.html
@@ -1,3 +1,5 @@
+<div ng-include="'components/navbar/navbar.html'"></div>
+
 <div class="col-md-12">
   <h1>My Leave</h1><br>
   <form>
@@ -17,6 +19,7 @@
       <!--<tr ng-repeat="username in entries">
       {{entries}}<br>-->
     </table>
+    <pre>{{test}}</pre>
   </form>
 </div>
 
