--- a/client/app/EditLeave/EditLeave.html
+++ b/client/app/EditLeave/EditLeave.html
@@ -15,7 +15,7 @@
         </a></tr></td>
       <br>
       </tr>
-      Username: {{Auth.getCurrentUser().name}}<br>
+      Username: {{getCurrentUser}}<br>
     </table>
     <!--<input type="submit" id="submit" value="Submit" />-->
   </form>
