--- a/client/app/UserProfile/UserProfile.html
+++ b/client/app/UserProfile/UserProfile.html
@@ -21,4 +21,5 @@
     </div></tr>
     <tr><input type="submit" id="submit" value="Submit" ng-click="submit(entry)" /></tr>
   </table>
+  <pre>{{testEntries}}</pre>
 </form>
