--- a/client/app/calendarpage/calendarpage.html
+++ b/client/app/calendarpage/calendarpage.html
@@ -1,7 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div class="col-md-12">
- <!-- <pre>{{leaveEntries}}</pre>
-  <pre>{{test1}}</pre>-->
+ <!-- <pre>{{leaveEntries}}</pre>-->
+  <pre>{{test[0].dateFrom}}</pre>
 
   <div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
 </div>
